--- a/serverless.yml
+++ b/serverless.yml
@@ -6,6 +6,16 @@ provider:
   runtime: nodejs18.x
 
 functions:
+  sendResponse:
+    handler: api/index.sendResponse
+    events:
+      - httpApi:
+        path: /api/results
+        method: post
+        request:
+          schemas:
+            application/json: ${file(./schemas/sendResponse.json)}
+
   api:
     handler: index.handler
     events:
