--- a/serverless.yml
+++ b/serverless.yml
@@ -8,6 +8,7 @@ params:
     dbName: alura-serverless
   dev:
     connectionString: mongodb://localhost:27017/${self:params.default.dbName}
+    salt: OxK4cMXUV07pRZ6QfmSM6jCpH5JMPqLG
   prod:
 
 provider:
@@ -16,6 +17,7 @@ provider:
   environment:
     MONGODB_CONNECTION_STRING: ${param:connectionString}
     MONGODB_DB_NAME: ${param:dbName}
+    SALT: ${param:salt}
 
 functions:
   sendResponse:
